# hand-tracker-1

./: .gitignore  GestureHelper.spec  README.md  gesture-server.spec  manifest.json  package-lock.json  popup.html  pyproject.toml  requirements.txt  server.py  venv_install.txt
extension/: background.js  content.js  keepalive.js  manifest.json  options.html  options.js
hand_tracker/: app.py
hand_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hand_tracker/model/keypoint_classifier/: keypoint.csv  keypoint_classifier.py  keypoint_classifier.tflite  keypoint_classifier_label.csv
hand_tracker/model/point_history_classifier/: old_point_history.csv  point_history.csv  point_history_classifier.py
handlers/: gesture_data_handler.py
python/: server.py
python(back-end)/: server.py  shared_data.py
python(back-end)/hand-tracker/: keypoint_classification_EN.ipynb  point_history_classification.ipynb
python(back-end)/hand-tracker/model/keypoint_classifier/: keypoint_classifier.keras
python(back-end)/hand-tracker/model/point_history_classifier/: point_history_classifier.keras  point_history_classifier.tflite
python(back-end)/hand_tracker/: app.py
python(back-end)/hand_tracker/model/: __init__.py
python(back-end)/hand_tracker/model/keypoint_classifier/: keypoint_classifier.py
python(back-end)/hand_tracker/model/point_history_classifier/: point_history_classifier.py  point_history_classifier_label.csv
python(back-end)/hand_tracker/utils/: __init__.py
python/handlers/: gesture_data_handler.py
